# slam_robot

./: .gitignore  CMakeLists.txt  README  package.xml
costmaps/: base_local_planner_params.yaml  costmap_common_params.yaml
descriptions/: README
descriptions/hokuyo_urg_description/.svn/: entries
descriptions/hokuyo_urg_description/urdf/: hokuyo_urg.xacro
descriptions/kinect_description/: manifest.xml
descriptions/kinect_description/.svn/: entries
descriptions/kinect_description/calibration/: ptu_kinect_calibration.xacro
descriptions/kinect_description/calibration/.svn/: entries
descriptions/kinect_description/launch/: kinect_standalone.launch
descriptions/kinect_description/launch/.svn/: all-wcprops
descriptions/kinect_description/meshes/.svn/: entries
descriptions/kinect_description/urdf/: kinect_standalone.urdf.xacro
descriptions/p2os_description/: CMakeLists.txt
descriptions/p2os_description/.svn/: all-wcprops
descriptions/p2os_description/launch/: pioneer3dx_gazebo.launch  pioneer3dx_gazebo_hokuyo_urg.launch  pioneer3dx_gazebo_teleop.launch
descriptions/ptu46_description/: mainpage.dox
descriptions/ptu46_description/.svn/: all-wcprops
descriptions/ptu46_description/urdf/: ptu46_standalone.xacro
descriptions/puntar_description/: mainpage.dox
descriptions/puntar_description/.svn/: all-wcprops  entries
descriptions/puntar_description/urdf/: base.urdf.xacro  base_laser.urdf.xacro
descriptions/tower_description/: manifest.xml
descriptions/tower_description/.svn/: all-wcprops
descriptions/tower_description/urdf/: tower.urdf.xacro  tower_standalone.urdf.xacro
dwa_diff_local_planner/: CHANGELOG.rst  CMakeLists.txt  blp_plugin.xml  package.xml
dwa_diff_local_planner/cfg/: DWADiffPlanner.cfg
dwa_diff_local_planner/include/dwa_diff_local_planner/: dwa_diff_planner.h  dwa_diff_planner_ros.h
dwa_diff_local_planner/src/: dwa_diff_planner.cpp  dwa_diff_planner_ros.cpp
exploration/: CMakeLists.txt  package.xml
exploration/include/exploration/: Frontier.h  FrontierFinder.h  goal_generator.h  goal_generator_ros.h
exploration/scripts/: attention.py  attention_view.py  explore.py  interest.py  interest_view.py  publish_attention_points.py  publish_intresting_points.py
exploration/src/: Exploration.cpp  Frontier.cpp  FrontierFinder.cpp  goal_generator.cpp  goal_generator_ros.cpp
exploration/srv/: GenerateGoal.srv
global_plannerx/: CMakeLists.txt  bgp_plugin.xml  package.xml
global_plannerx/cfg/: GlobalPlanner.cfg
global_plannerx/include/global_plannerx/: astar.h  dijkstra.h  expander.h  gradient_path.h  grid_path.h  planner_core.h  potential_calculator.h  quadratic_calculator.h  traceback.h
global_plannerx/src/: astar.cpp  dijkstra.cpp  gradient_path.cpp  grid_path.cpp  plan_node.cpp  planner_core.cpp  quadratic_calculator.cpp
hokuyo_urg_description/.svn/: all-wcprops
hokuyo_urg_description/meshes/.svn/: all-wcprops  entries
hokuyo_urg_description/urdf/.svn/: all-wcprops  entries
kinect_description/.svn/: all-wcprops
kinect_description/.svn/text-base/: mainpage.dox.svn-base
kinect_description/calibration/.svn/: all-wcprops
kinect_description/launch/.svn/: entries
kinect_description/meshes/.svn/: all-wcprops
kinect_description/urdf/: kinect.gazebo.urdf.xacro  kinect.urdf.xacro  kinect_old.urdf.xacro
launch/: amcl_nav.launch  move_base.launch  robot.launch  robot_teleop.launch  slam_sim.launch  slam_teleop.launch  tf_server.launch  xbox_teleop.launch
mug_detector/: CMakeLists.txt  package.xml  setup.py
mug_detector/scripts/: detect_mugs.m  detector.py  detector_service.py
mug_detector/scripts/mug_detector/: __init__.py  prepare_mug_batch_im.m
mug_detector/srv/: Detections.srv
p2os_description/.svn/: entries
p2os_description/launch/.svn/: all-wcprops
p2os_description/meshes/.svn/: all-wcprops
p2os_description/src/.svn/: entries
p2os_description/urdf/.svn/: entries
p2os_description/urdf/pioneer3dx/: pioneer3dx.xacro  pioneer3dx.xacro.old  pioneer3dx_hokuyo_urg.xacro
ptu46_description/.svn/: entries
ptu46_description/launch/.svn/: all-wcprops  entries
ptu46_description/meshes/: ptu46_base.stl  ptu46_tilt.stl
ptu46_description/meshes/.svn/: entries
ptu46_description/urdf/: ptu46.xacro.old
ptu46_description/urdf/.svn/: entries
puntar_description/: manifest.xml
puntar_description/urdf/: base_ptu_kinect.urdf.xacro  erratic_hokuyo_laser.xacro  puntar_full.urdf.xacro
puntar_description/urdf/.svn/: all-wcprops
scripts/: joy_drive.py
slam_robot/: CMakeLists.txt  package.xml
slam_robot/costmaps/: base_local_planner_params.yaml  costmap_common_params.yaml
slam_robot/launch/: amcl_nav.launch  global_map.launch  gmapping_nav.launch  move_base.launch  robot_drivers.launch  robot_full.launch  slam_teleop.launch  teleop.launch
slam_robot/launch/include/: cv.launch  nav_base.launch  robot_drivers.launch  xbox_teleop.launch
slam_robot/params/: amcl_params.yaml  costmap_common_params.yaml  dynamic_global_costmap_params.yaml  gmapping_params.yaml  planner_params.yaml
slam_robot/scripts/: command_server.py  image_proc.py  path_builder.py
slam_robot/srv/: Move.srv  SpinPtu.srv
slam_robot/urdf/: pioneer3dx.xacro~
tower_description/: mainpage.dox
tower_description/.svn/: entries
tower_description/launch/: tower_standalone.launch
tower_description/launch/.svn/: entries
tower_description/meshes/.svn/: all-wcprops
tower_description/urdf/.svn/: all-wcprops  entries
trajectory_planner_diff/: CMakeLists.txt  blp_plugin.xml  package.xml
trajectory_planner_diff/cfg/: TrajectoryPlannerDiff.cfg
trajectory_planner_diff/include/trajectory_planner_diff/: trajectory_planner_diff.h  trajectory_planner_diff_ros.h
trajectory_planner_diff/src/: trajectory_planner_diff.cpp  trajectory_planner_diff_ros.cpp
urdf/: pioneer3dx.xacro
(+48 files in other folders)
